<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/securityCategory" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="enableSMS"
            android:title="@string/security" />

        <EditTextPreference
            android:defaultValue=""
            android:key="securityPattern"
            android:summary=""
            android:title="@string/securityPattern" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/curaPassword" >
        <com.cura.PassDialogPreference
            android:dialogLayout="@layout/prefpassdialog"
            android:key="curaPassDialog"
            android:negativeButtonText="Cancel"
            android:positiveButtonText="OK"
            android:title="@string/setCuraPass" />
    </PreferenceCategory>

</PreferenceScreen>