<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
<TextView android:text="@string/oldPassTextView"
    android:textSize="12dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>
<EditText
    android:id="@+id/oldPassEditText"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:password="true"/>

<TextView android:text="@string/newPassTextView"
    android:textSize="12dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>
<EditText
    android:id="@+id/newPassEditText"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:password="true"/>
<TextView android:text="@string/confirmPassTextView"
    android:textSize="12dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"/>
<EditText
    android:id="@+id/confirmPassEditText"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:password="true"/>
</LinearLayout>