<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:gravity="fill_horizontal"
            android:text="@string/syslogTalk" />

        <Spinner
            android:id="@+id/HeadTailSpinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dip" />

        <Spinner
            android:id="@+id/LogFileSpinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dip" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dip"
            android:layout_marginTop="20dip"
            android:gravity="center"
            android:orientation="horizontal" >

            <CheckBox
                android:id="@+id/EnableLineNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dip"
                android:text="@string/checkBoxSysLogs" />

            <EditText
                android:id="@+id/LinesNumber"
                android:layout_width="50dip"
                android:layout_height="wrap_content"
                android:ems="10"
                android:maxLength="2"
                android:numeric="integer" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/sysLogButton"
                style="@style/positive_buttons_style"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:layout_weight="1"
                android:text="@string/sysLogButtonText" />

            <Button
                android:id="@+id/sysLogSaveLogsButton"
                style="@style/savelogs_button_style"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:layout_weight="1"
                android:text="@string/sysLogSaveLogsButtonText" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>