<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dip"
                android:src="@drawable/curalogo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:gravity="center"
                android:text="@string/loginText"
                android:textSize="14dip"
                android:textStyle="bold|italic"
                android:typeface="serif" />

            <ImageView
                android:id="@+id/server"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dip"
                android:src="@drawable/serveroffline" />

            <TextView
                android:id="@+id/connecting"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Connecting..."
                android:textColor="#7AC65D"
                android:textSize="14dip"
                android:textStyle="bold|italic"
                android:typeface="serif"
                android:visibility="invisible" />
            <!-- android:layout_marginBottom="20dip" -->

            <LinearLayout
                android:id="@+id/ButtonsLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/selectServer"
                    style="@style/positive_buttons_style"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dip"
                    android:layout_marginRight="20dip"
                    android:layout_marginTop="20dip"
                    android:layout_weight="1"
                    android:text="@string/selectServer" >
                </Button>

                <Button
                    android:id="@+id/newServer"
                    style="@style/positive_buttons_style"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dip"
                    android:layout_marginRight="20dip"
                    android:layout_marginTop="20dip"
                    android:layout_weight="1"
                    android:text="@string/newServer" >
                </Button>

<!--                 <Button -->
<!--                     android:id="@+id/modifyServers" -->
<!--                     style="@style/modify_button_style" -->
<!--                     android:layout_width="fill_parent" -->
<!--                     android:layout_height="wrap_content" -->
<!--                     android:layout_marginLeft="30dip" -->
<!--                     android:layout_marginRight="30dip" -->
<!--                     android:layout_marginTop="30dip" -->
<!--                     android:layout_weight="1" -->
<!--                     android:text="@string/modifyServer" > -->
<!--                 </Button> -->
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>